--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>MỸ PHẨM MỸ CHÍNH HÃNG </h1>
         <nav>
             <ul>
-                <li><a href=""><img src="images/anh1.png" alt=""></a></li>
+                <li><a href=""><img src="anh1.png" alt=""></a></li>
                 <li><a href="#">TRANG CHỦ</a></li>
                 <li><a href="#">SALE</a></li>
                 <li><a href="#">BÁN CHẠY</a></li>
@@ -32,49 +32,49 @@
             <h3>Hãng Son Nổi Tiếng Bán Chạy</h3>
             <section class="product-list">
         <div class="product">
-            <img src="images/anh2.png" alt="Product 1">
+            <img src="anh2.png" alt="Product 1">
             <h4>Son Dior Addict Lip Glow Màu Pink 001- Tone Hồng Nhẹ</h4>
             <p>Giá: 850.000 VNĐ</p>
             <button class="buy-now-btn">Mua ngay</button>
         </div>
         <div class="product">
-            <img src="images/anh3.png" alt="Product 1">
+            <img src="anh3.png" alt="Product 1">
             <h4>Son Dior Addict Lipstick Rouge Shine Màu 922 Wildior</h4>
             <p>Giá: 799.000 VNĐ</p>
             <button class="buy-now-btn">Mua ngay</button>
         </div>
         <div class="product">
-            <img src="images/anh4.png" alt="Product 1">
+            <img src="anh4.png" alt="Product 1">
             <h4>Bảng Màu Son Gucci Đẹp Mê Mẩn Từ Trong Ra Ngoài</h4>
             <p>Giá: 799.000 VNĐ</p>
             <button class="buy-now-btn">Mua ngay</button>
         </div>
         <div class="product">
-            <img src="images/anh7.png" alt="Product 1">
+            <img src="anh7.png" alt="Product 1">
             <h4>Son YSL Rouge Pur Couture The Slim 28 True Chili</h4>
             <p>Giá: 800.000 VNĐ</p>
             <button class="buy-now-btn">Mua ngay</button>
         </div>
         <div class="product">
-            <img src="images/anh6.png" alt="Product 1">
+            <img src="anh6.png" alt="Product 1">
             <h4>Son Gucci Voile 203 Midred Rosewood- Màu Hồng Đỏ Đất</h4>
             <p>Giá: 790.000 VNĐ</p>
             <button class="buy-now-btn">Mua ngay</button>
         </div>
         <div class="product">
-            <img src="images/anh5.png" alt="Product 1">
+            <img src="anh5.png" alt="Product 1">
             <h4>Son Gucci Limited 25 Goldie Red (Vỏ Đen Tím)</h4>
             <p>Giá: 980.000 VNĐ</p>
             <button class="buy-now-btn">Mua ngay</button>
         </div>
         <div class="product">
-            <img src="images/anh8.png" alt="Product 1">
+            <img src="anh8.png" alt="Product 1">
             <h4>Son YSL Rouge Muse Brick Red Màu Đỏ Gạch Đẹp Nhất</h4>
             <p>Giá: 950.000 VNĐ</p>
             <button class="buy-now-btn">Mua ngay</button>
         </div>
         <div class="product">
-            <img src="images/anh9.png" alt="Product 1">
+            <img src="anh9.png" alt="Product 1">
             <h4>Son YSL The Blod 02 Wilful Red-Màu Đỏ Tươi Ánh Cam</h4>
             <p>Giá: 950.000 VNĐ</p>
             <button class="buy-now-btn">Mua ngay</button>
@@ -85,25 +85,25 @@
         <h3>CUSHION</h3>
         <section class="product-list">
         <div class="product">
-            <img src="images/anh19.png" alt="Product 1">
+            <img src="anh19.png" alt="Product 1">
             <h4>Phấn Nước Chanel Tone 10 Les Beiges Healthy Glow Gel Touch Foundation</h4>
             <p>Giá: 1.749.000 VNĐ</p>
             <button class="buy-now-btn">Mua ngay</button>
         </div>
         <div class="product">
-            <img src="images/anh15.png" alt="Product 1">
+            <img src="anh15.png" alt="Product 1">
             <h4>Phấn Nước Dior Forever Perfect Cushion Mitzah Limited Eddition</h4>
             <p>Giá: 2.150.000 VNĐ</p>
             <button class="buy-now-btn">Mua ngay</button>
         </div>
         <div class="product">
-            <img src="images/anh16.png" alt="Product 1">
+            <img src="anh16.png" alt="Product 1">
             <h4>Cushion YSL Touche Éclat Glow Pact-Mịn Mượt, Căng Bóng</h4>
             <p>Giá: 1.450.000 VNĐ</p>
             <button class="buy-now-btn">Mua ngay</button>
         </div>
         <div class="product">
-            <img src="images/anh17.png" alt="Product 1">
+            <img src="anh17.png" alt="Product 1">
             <h4>Phấn Nước YSL Le Cushion Encre Peau Luminous Matte</h4>
             <p>Giá: 1.450.000 VNĐ</p>
             <button class="buy-now-btn">Mua ngay</button>
@@ -113,25 +113,25 @@
         <h3>TONER</h3>
         <section class="product-list">
         <div class="product">
-            <img src="images/anh20.png" alt="Product 1">
+            <img src="anh20.png" alt="Product 1">
             <h4>Toner Kiềm Dầu, Se khít Lỗ Chân Lông La Roche Posay Effaclar 200ml</h4>
             <p>Giá: 319.000 VNĐ</p>
             <button class="buy-now-btn">Mua ngay</button>
         </div>
         <div class="product">
-            <img src="images/anh21.png" alt="Product 1">
+            <img src="anh21.png" alt="Product 1">
             <h4>Nước Cân Bằng Phục Hồi Và Tái Tạo Da  skin1004 Madagascar Centella Toning Toner</h4>
             <p>Giá: 312.000 VNĐ</p>
             <button class="buy-now-btn">Mua ngay</button>
         </div>
         <div class="product">
-            <img src="images/anh22.png" alt="Product 1">
+            <img src="anh22.png" alt="Product 1">
             <h4>Nước Hoa Hồng Không Mùi Klais Supple Preparation Unscented Toner</h4>
             <p>Giá: 288.000 VNĐ</p>
             <button class="buy-now-btn">Mua ngay</button>
         </div>
         <div class="product">
-            <img src="images/anh24.png" alt="Product 1">
+            <img src="anh24.png" alt="Product 1">
             <h4>Toner Hoa Cúc KIEH'S CALENDULA HERBAL EXTRACT Toner ALCOHOL-FREE Của Mỹ </h4>
             <p>Giá: 1.095.000 VNĐ</p>
             <button class="buy-now-btn">Mua ngay</button>
@@ -141,25 +141,25 @@
         <h3>Trang điểm</h3>
         <section class="product-list">
         <div class="product">
-            <img src="images/anh10.png" alt="Product 1">
+            <img src="anh10.png" alt="Product 1">
             <h4>Phấn Mắt DIOR Backstage Eye Palette 10g</h4>
             <p>Giá: 1.100.000 VNĐ</p>
             <button class="buy-now-btn">Mua ngay</button>
         </div>
         <div class="product">
-            <img src="images/anh11.png" alt="Product 1">
+            <img src="anh11.png" alt="Product 1">
             <h4>Phấn Mắt Dior Backstage Eye Palette Cool Neutrals 9 Ô Màu </h4>
             <p>Giá: 1.590.000 VNĐ</p>
             <button class="buy-now-btn">Mua ngay</button>
         </div>
         <div class="product">
-            <img src="images/anh12.png" alt="Product 1">
+            <img src="anh12.png" alt="Product 1">
             <h4>Bảng phấn mắt CHANEL Les Beiges Eyeshadow Palette</h4>
             <p>Giá: 1.150..000 VNĐ</p>
             <button class="buy-now-btn">Mua ngay</button>
         </div>
         <div class="product">
-            <img src="images/anh13.png" alt="Product 1">
+            <img src="anh13.png" alt="Product 1">
             <h4>Phấn Mắt Yves Saint Laurent YSL Couture Clutch Palette 20g</h4>
             <p>Giá: 2.290.000 VNĐ</p>
             <button class="buy-now-btn">Mua ngay</button>
